# raylib-template

./: CMakeLists.txt
src/: main.c
